[gd_scene load_steps=3 format=3 uid="uid://e7oq2abndy2r"]

[ext_resource type="StyleBox" uid="uid://d3vd0iapbtdo5" path="res://addons/godot-component-generator/COMPONENT_TEST_TARGET/ComponentView/default_view_stylebox.tres" id="1_377uh"]
[ext_resource type="Script" path="res://addons/godot-component-generator/ComponentView/component_view.gd" id="1_ti520"]

[node name="ComponentVew" type="PanelContainer"]
custom_minimum_size = Vector2(500, 100)
scale = Vector2(1.00113, 1)
size_flags_horizontal = 3
tooltip_text = "RandomAudioStream"
mouse_default_cursor_shape = 2
theme_override_styles/panel = ExtResource("1_377uh")
script = ExtResource("1_ti520")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2

[node name="LblName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "RandomAudioStream"
clip_text = true

[node name="LblPath" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 14
text = "user/test_user/gd_components/random_audio_stream_player/random_audio_stream_player/random_audio_stream_player/random_audio_stream_player/"
autowrap_mode = 3
clip_text = true

[node name="LblDescription" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 125)
layout_mode = 2
text = "This is a test description that will be shown in the main panel. Test"
autowrap_mode = 2
clip_text = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
